# aws-account-id-from-key-id

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs
