[package]
name = "aws_account_id_from_key_id"
description = "Decodes the AWS Account ID given an AWS Access Key ID"
version = "0.8.2"
edition = "2021"
authors = ["Dan O'Day <d@4n68r.com"]
license = "MIT"
repository = "https://github.com/danzek/aws-account-id-from-key-id"
readme = "README.md"
categories = ["encoding"]

[dependencies]
